# libshake-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: ci.yml
examples/: README.md  capacity.rs  combined.rs  combined_periodic_friction.rs  combined_rumble_spring.rs  conditions.rs  demo_suite.rs  list_devices.rs  mixing.rs  order.rs  playback.rs  simple_periodic.rs  simple_rumble.rs  update.rs  visualize.rs
src/: backend.rs  device.rs  effect.rs  error.rs  lib.rs  simple.rs
src/linux/: mod.rs
src/mock/: mod.rs
src/osx/: ffi.rs  mod.rs
tests/: device_enumeration.rs  device_opening.rs  effect_construction.rs  effect_edge_cases.rs  simple_api.rs  test_backend_trait.rs  test_device.rs  test_effect_construction.rs  test_effect_conversion.rs  test_effect_edge_cases.rs  test_simple.rs
