[package]
name = "shake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
nix = { version = "0.28", features = ["fs", "ioctl"] }

[dev-dependencies]
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"
io-kit-sys = "0.1"

[build-dependencies]
bindgen = "0.69"
